Fix text align preformat block.

--- a/static/styles.css
+++ b/static/styles.css
@@ -79,9 +79,6 @@ figure {
 
 figure.preformat {
     display: block;
-}
-
-figure.preformat figcaption {
     text-align: left;
 }
 
